fix(plugins/plugin-client-common): sidecar tab overflow buttons have low contrast
part of #8017

--- a/plugins/plugin-client-common/web/scss/components/Sidecar/PatternFly.scss
+++ b/plugins/plugin-client-common/web/scss/components/Sidecar/PatternFly.scss
@@ -44,3 +44,20 @@
   flex: 1;
   display: flex;
 }
+
+/** See https://github.com/kubernetes-sigs/kui/issues/8017 */
+@include SidecarTopTabs {
+  .pf-c-tabs__scroll-button {
+    color: var(--color-text-02);
+    background-color: var(--color-sidecar-header);
+
+    &[disabled] {
+      color: var(--color-base04);
+    }
+
+    &:before {
+      /* this is for the right/left border of the bottom; PF seems to assume some other framing that we don't have */
+      display: none;
+    }
+  }
+}
